Add payment and storage using S3 (secured)
