# src/main/java/com/example/bookstore/controller/BookController.java
@@ -5,11 +5,13 @@ import com.example.bookstore.dto.BookPatchRequest;
 import com.example.bookstore.dto.BookRequest;
 import com.example.bookstore.dto.BookResponse;
 import com.example.bookstore.service.BookService;
+import com.example.bookstore.service.S3StorageService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.multipart.MultipartFile;
 
 import java.util.List;
 import java.util.UUID;
@@ -20,10 +22,14 @@ public class BookController implements BooksApi {
 
     private final BookService bookService;
 
+
     @Override
-    @PreAuthorize("hasRole('ADMIN')")
-    public ResponseEntity<BookResponse> createBook(BookRequest bookRequest) {
-        return new ResponseEntity<>(bookService.addBook(bookRequest), HttpStatus.CREATED);
+    public ResponseEntity<BookResponse> createBook(
+            BookRequest book,
+            MultipartFile image) {
+
+        BookResponse response = bookService.addBook(book, image);
+        return ResponseEntity.status(HttpStatus.CREATED).body(response);
     }
 
     @Override
